# atacamite

./: .gitignore  .hlint.yaml  FUNDING.yml  LICENSE  Makefile  README.md  atacamite  atacamite.cabal  main  make.sh
examples/: 110-v.ata  110.ata  const.ata  err.ata  fizzbuzz.ata  foo.ata  hello.txt  lists.ata  sleep.ata  stack.ata  storeload.ata  takepeek.ata  temp.ata  temp2.ata  try.ata
examples/imports/: import1.ata  import2.ata  importlib.ata
src/: Interpret.hs  Interpreter.hs  Machine.hs  Main.hs  Parse.hs  Parser.hs  Types.hs  Util.hs
std/: list.ata  prelude.ata  strings.ata
